# ohmysockets

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  data.csv  helper.c  helper.h  main.c  network.c  network.h
common/helper/: CMakeLists.txt  helper.c  helper.h
common/lib/mbedtls-2.16.6/: CMakeLists.txt
common/network/: CMakeLists.txt  network.c  network.h
server/: .gitignore  CMakeLists.txt  circular_buffer.c  circular_buffer.h  main.c  main.h
